# grapheme-clusters

./: .gitignore  .gitmodules  Characters.v  Extraction.v  Grapheme.v  GraphemeClusterBreakProperty.v  Makefile  Partition.v  README.md  RegExp.v  _CoqProject  default.nix  grapheme-clusters.cabal  shell.nix  stack.yaml
constructive-regexp/: default.nix  fix-ssreflect-paths.patch
coq-src/: Equality.v  Grapheme.v
haskell-src/: BooleanAlgebra.hs  DFA.hs  Derivative.hs  GraphemeClusterBreak.hs  InfiniteBooleanAlgebra.hs  KleeneAlgebra.hs  Language.hs  Operations.hs  RegExp.hs  Segmentation.hs  Set.hs  Simplify.hs  SparseMatrix.hs  SparseVector.hs
haskell-src/Data/: BooleanAlgebra.hs  GSet.hs
haskell-src/RegExp/: Derivative.hs  Equation.hs  Language.hs  Operations.hs  RegExp.hs
haskell-src/RegExp/Internal/: DFA.hs
test/: Helpers.hs
test/RegExp/: RegExpSpec.hs
test/RegExp/Internal/: DFASpec.hs
